# server

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: c-cpp.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: default.md
exe/: .cproject  .project  Dockerfile  Makefile
exe/include/: pwire-server.h
exe/src/: pwire-server.cpp
lib/: Makefile
lib/include/: LoRaModule.h  SPWLPackage.h  logger.h  lora-module.h  pwire-server-lib.h  redis-service.h
lib/src/: LoRaModule.cpp  SPWLPackage.cpp  Test.cpp  logger.cpp  lora-module.cpp  pwire-server-lib.cpp  redis-service.cpp
test/: Dockerfile  Makefile
test/src/: pwire-server-test.cpp
